fix: breadcrumbs on IE

--- a/_HTML/src/sass/_blocks/preloader.scss
+++ b/_HTML/src/sass/_blocks/preloader.scss
@@ -1,7 +1,7 @@
 .preloader {
 	justify-content: center;
 	align-items: center;
-	background: url(/Media/assets/images/preloader/preloader-bg.png);
+	background: url(../images/preloader/preloader-bg.png);
 	display: none;
 	top: 0;
 	left: 0;
@@ -22,7 +22,7 @@
 		top: 0;
 		height: 100%;
 		width: 50%;
-		background: #ffffff url(/Media/assets/images/preloader/preloader-flynas.png) no-repeat;
+		background: #ffffff url(../images/preloader/preloader-flynas.png) no-repeat;
 		background-position-x: calc(100% - 215px);
 		background-position-y: center;
 		box-shadow: 10px 0 15px 0 rgba(68, 68, 68, 0.1);
@@ -51,7 +51,7 @@
 		content: '';
 		height: 240px;
 		width: 240px;
-		background: url(/Media/assets/images/preloader/preloader-front.png);
+		background: url(../images/preloader/preloader-front.png);
 		background-size: contain;
 		animation: rotate 10s linear infinite;
 		z-index: 3;
@@ -65,6 +65,16 @@
 			width: 192px;
 		}
 	}
+
+  .ie &:after {
+    left: calc(50% - 120px);
+    top: calc(50% - 120px);
+
+    @include media(md, max) {
+      left: calc(50% - 96px);
+      top: calc(50% - 96px);
+    }
+  }
 }
 
 .preloader-back {
@@ -74,13 +84,21 @@
 	align-items: center;
 	position: relative;
 
+  .ie & {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
 	&:before {
 		position: absolute;
 		display: block;
 		content: '';
 		height: 264px;
 		width: 264px;
-		background: url(/Media/assets/images/preloader/preloader-shadow.png);
+		background: url(../images/preloader/preloader-shadow.png);
 		background-size: contain;
 		animation: rotate 10s linear infinite;
 
@@ -95,11 +113,21 @@
 
 	}
 
+  .ie &:before {
+    left: calc(50% - 132px);
+    top: calc(50% - 132px);
+
+    @include media(md, max) {
+      left: calc(50% - 105px);
+      top: calc(50% - 105px);
+    }
+  }
+
 	&:after {
 		position: absolute;
 		display: block;
 		content: '';
-		background: url(/Media/assets/images/preloader/preloader-back.png);
+		background: url(../images/preloader/preloader-back.png);
 		background-size: contain;
 		animation: rotateBack 10s linear infinite;
 		transform-origin: center center;
@@ -115,6 +143,16 @@
 			width: 280px;
 		}
 	}
+
+  .ie &:after {
+    left: calc(50% - 175px);
+    top: calc(50% - 175px);
+
+    @include media(md, max) {
+      left: calc(50% - 140px);
+      top: calc(50% - 140px);
+    }
+  }
 }
 
 @keyframes rotate {
